src/tests/GepardParser.jj
options {
	STATIC = false;
	IGNORE_CASE = true;
}

PARSER_BEGIN(GepardParser)
//package parser;
public class GepardParser {
	public static void main(String args[]) {
		GepardParser parser = new GepardParser(System.in);
		try{
			//parser.SelectNoGroup();		//OK
			//parser.ListOfAttributes();	// OK
			//parser.TableAttribute();	// OK, using "Table." raises an exception Encountered " "TABLE" "table (token)
			//parser.TableName();		// OK
			//parser.ListOfTables();		// OK
			
			//parser.NonJoinCondition();
			//System.out.println(parser.Select());
			System.out.println("Validated");
		}catch(Exception e){
		   System.out.println(e);
		}
	}
}
PARSER_END(GepardParser)

/* ================ Tokens Start ============== */

// Skip Tokens
SKIP : { " " | "\r" | "\n" | "\t"}

// DDL Tokens
TOKEN : { < CREATE : "CREATE" > }
TOKEN : { < DROP : "DROP" > }
TOKEN : { < TABLE : "TABLE" > }
TOKEN : { < INTEGER : "INTEGER" > }
TOKEN : { < VARCHAR : "VARCHAR"> }
TOKEN : { < CASCADE : "CASCADE" > }
TOKEN : { < CONSTRAINT : "CONSTRAINT" > }
TOKEN : { < CONSTRAINTS : "CONSTRAINTS" > }
TOKEN : { < PRIMARYKEY : "PRIMARY KEY" > }
TOKEN : { < UNIQUE : "UNIQUE" > }
TOKEN : { < HORIZONTAL : "HORIZONTAL" > }




// DML Tokens
TOKEN : { < DELETE : "DELETE" > }
TOKEN : { < FROM : "FROM" > }
TOKEN : { < WHERE : "WHERE" > }
TOKEN : { < INSERT : "INSERT" > }
TOKEN : { < INTO : "INTO" > }
TOKEN : { < VALUES : "VALUES" > }




// Special Character Tokens
TOKEN : { < LPAREN : "(" > }
TOKEN : { < RPAREN : ")" > }
TOKEN : { < SEMICOLON : ";" > }
TOKEN : { < COMMA : "," > }
TOKEN : { < SINGLEQUOTE : "'" > }
TOKEN : {< OPERATOR: "=" | "!=" | ">=" | ">" | "<=" | "<" >}
TOKEN : { < UNDERSCORE : "_" > }
TOKEN : { < MINUS : "-" > }
TOKEN : { < NULL : "NULL" > }
TOKEN : { < DOT : "." > }
TOKEN : { < AST : "*" > }




// Select Tokens
TOKEN : { < AND : "AND" > }
TOKEN : { < OR : "OR" > }
TOKEN : { < SELECT : "SELECT" > }
TOKEN : { < COUNT : "COUNT" > }
TOKEN : { < CONSTANT : "CONSTANT" > }

// Literal Tokens
TOKEN : { < DIGIT : ["0"-"9"] > }
TOKEN : { < LETTER : ["a"-"z","A"-"Z"] > }

/* ================ Tokens End ============== */

/* ================ Rules Start ============== */

// Main Parser Call
int ParseQuery() : {int queryType;}
{
	queryType=ParseDDLQuery(){return queryType;} |
	queryType=ParseDMLQuery(){return queryType;}
}

// DDL Statement
int ParseDDLQuery() : {int queryType;}
{
	queryType=DropTable(){return queryType;} |
	queryType=CreateTable(){return queryType;}
}
int DropTable() : {}
{
	<DROP><TABLE>Name()(<CASCADE><CONSTRAINTS>)?<SEMICOLON>
	{return 3;}
}
int CreateTable() : {int queryType;}
{
	<CREATE><TABLE>Name()<LPAREN>TableColumn()(<COMMA>(TableColumn()|TableConstraint()))*<RPAREN>queryType=PartitionedOrNonPartitioned(){return queryType;}
}
int PartitionedOrNonPartitioned() : {}
{
	CreateTableNonPartitioned(){return 1;}|CreateTablePartitioned(){return 2;}
}
void CreateTableNonPartitioned() : {}
{
	<SEMICOLON>
}
void CreateTablePartitioned() : {}
{
	HorizontalSyntax()
}
void HorizontalSyntax() : {}
{
	<HORIZONTAL><LPAREN>Name()<LPAREN>ListOfBoundaries()<RPAREN><RPAREN><SEMICOLON>
}
void ListOfBoundaries() : {}
{
	(<DIGIT>)+(<COMMA>(<DIGIT>)+)*
}
void TableColumn() : {}
{
	Name()(<INTEGER>|(<VARCHAR><LPAREN>(<DIGIT>)+<RPAREN>))
}
void TableConstraint() : {}
{
	<CONSTRAINT>Name()(<PRIMARYKEY>|<UNIQUE>)<LPAREN>Name()<RPAREN>
}


// Select Statement

int Select() : {int queryType;}
{
	<SELECT>(queryType=SelectCountAllTable(){return queryType;}|queryType=SelectNoGroup(){return queryType;})
}

void ListOfAttributes() : {}
{
	TableAttribute()(<COMMA>TableAttribute())*
}
void TableAttribute() : {}
{
	TableName()<DOT>TableName()
}
void NonJoinCondition() : {}
{
	<LPAREN>TableAttribute()<OPERATOR>Constant()<RPAREN>
}

void NonJoinConditions() : {}
{
	NonJoinCondition()((<AND>|<OR>)NonJoinCondition())?
}

void Count(): {}
{
 <COUNT><LPAREN><AST><RPAREN>
}


int SelectCountAllTable(): {}
{
Count()<FROM>Name()<SEMICOLON>
{return 11;}
}

int SelectNoGroup() : {}
{
(<AST>|ListOfAttributes())
<FROM>ListOfTables()
(<WHERE>fdbs_where_clause())?
<SEMICOLON>{return 12;}
}
void fdbs_where_clause() : {}
{
	<LETTER>
}


// DML Statement
int ParseDMLQuery() : {int queryType;}
{
	queryType=DeleteTable(){return queryType;} | 
	queryType=InsertTable(){return queryType;}
}
int DeleteTable() : {}
{
  <DELETE><FROM>Name()(WhereClause())?<SEMICOLON>
  {return 4;}
  
}

int InsertTable() : {}
{
  <INSERT><INTO>Name()<VALUES><LPAREN>(Constant())((<COMMA>Constant())*)<RPAREN><SEMICOLON>
  {return 5;}
}



// General Semantics
void WhereClause() : {}
{
	<WHERE>Name()<OPERATOR>Constant()
}
	//Names must begin with a letter and may not end with an underscore. Only use letters, numbers and underscores in names.
void Name() : {}
{
	(<LETTER>|<DIGIT>|<UNDERSCORE>|<MINUS>)*
}
void TableName() : {}
{
	(<LETTER>|<UNDERSCORE>)(<LETTER>|<UNDERSCORE>|<DIGIT>)*
}
void ListOfTables() : {}
{
	TableName()(<COMMA>TableName())?

}
void Constant() : {}
{
	StringConstant()|IntegerConstant()|<NULL>
}
void IntegerConstant(): {}
{
	 (<MINUS>)?(<DIGIT>)+
}
void StringConstant(): {}
{
	 <SINGLEQUOTE>Name()<SINGLEQUOTE>
}

/* ================ Rules End ============== */
